A Standard compliant C preprocessor
Copyright (c) 2001-2003 Hartmut Kaiser
http://spirit.sourceforge.net/

See Copyright.txt for full copyright notices and acknowledgements.

-------------------------------------------------------------------------------

Sat Feb 22 20:52:06  2003
- Bumped version to 0.9.0
- Added test for invalid or not allowed universal character values (see
  C++ Standard 2.2.2 [lex.charset] and Annex E)
- Fixed a bug with newlines between a macro name and the opening paranthesis 
  during the macro expansion and a bug with newlines inside the parameter list
  during the macro expansion.
- Added the following predefined macros:
    __SPIRIT_PP__
        expands to the version number of the pp-iterator lib (i.e. 0x0090 for 
        V0.9.0)
    __SPIRIT_PP_VERSION__
        expands to the full version number of the pp-iterator lib (i.e.
        0x00900436 for V0.9.0.436)
    __SPIRIT_PP_VERSION_STR__
        expands to the full version string of the pp-iterator lib (i.e. 
        "0.9.0.436")
  
Fri Feb 21 22:09:04  2003 (feature complete!)
- Allowed to optionally compile the Re2c generated lexer in 'C' mode, because 
  at least the VC7.1 (final beta) compiler has problems to compile it in 'C++'
  mode with optimizations switch on
- Implemented #error and #warning (optional) directives (C++ standard 16.5). 
  Additionally there are now allowed the following preprocessor configuration 
  constants:
    CPP_PREPROCESS_ERROR_MESSAGE_BODY
        if defined, preprocesses the message body of #error and #warning  
        directives to allow for better diagnostics.
    CPP_SUPPORT_WARNING_DIRECTIVE
        if defined, then the #warning directive will be recognized such, that
        a warning with the given message will be issued
- Adjusted the error handling for the Re2c generated C++ lexer, so that any
  error inside the lexer is now propagated as an cpplexer_exception.
- Implemented the #line directive (C++ standard 16.4)