@@ -91,8 +91,10 @@ public:
     iterator_t end() const { return iterator_t(); }
 
 // maintain include pathes
-    bool add_include_path(char const *path_, bool is_system = false)
-        { return includes.add_include_path(path_, is_system);}
+    bool add_include_path(char const *path_)
+        { return includes.add_include_path(path_, false);}
+    bool add_sysinclude_path(char const *path_)
+        { return includes.add_include_path(path_, true);}
     void set_sys_include_delimiter() { includes.set_sys_include_delimiter(); }
     int get_iteration_depth() const { return iter_ctxs.size(); }
 
@@ -142,7 +144,7 @@ protected:
 //
 //  expand_tokensequence(): 
 //      expands all macros contained in a given token sequence, handles '##' 
-//      and '#' pp operators and re-scans the resulting sequence, if nessecary 
+//      and '#' pp operators and re-scans the resulting sequence 
 //      (essentially preprocesses the token sequence).
 //
 //      The expand_undefined parameter is true during macro expansion inside
