@@ -6,6 +6,8 @@ See Copyright.txt for full copyright notices and acknowledgements.
 
 -------------------------------------------------------------------------------
 
+- Fixed a couple of 'missing typename' bugs
+
 Sat Feb 22 20:52:06  2003
 - Bumped version to 0.9.0
 - Added test for invalid or not allowed universal character values (see
